bk_ida/gccida/c0/output_verbatim
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_verbatim/src/diagnostic.c:1801:23: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
void output_verbatim( output_buffer_0 *buffer, const char *msgid, ...) 
                      ^~~~~~~~~~~~~~~
                      output_buffer
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_verbatim/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_verbatim/src/diagnostic.c:1805:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *buffera; // [rsp+188h] [rbp-8h] 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_verbatim/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_verbatim/src/diagnostic.c:1810:49: error: expected expression
output_do_verbatim( buffer, msgid, ( va_list_0 *)ap); 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_verbatim/src/diagnostic.c:1810:38: error: use of undeclared identifier 'va_list_0'
output_do_verbatim( buffer, msgid, ( va_list_0 *)ap); 
                                     ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_verbatim/src/obj/diagnostic.o] Error 1
